--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
     
 
     <!-- 1st background image -->
-    <div class="parallax first-parallax">
+    <div class="parallax first-parallax responsive">
         <div class="home-page-text nav-item transbox">
             <h1 class="home-text">Jennifer Artschwager</h1>
         </div>
@@ -87,7 +87,7 @@
         </div>
     </div>
 
-    <div class="second-parallax">
+    <div class="second-parallax responsive">
     </div>
     <!-- tech port - para 3 -->
 <div class="techPortRow spacer-home">
@@ -109,7 +109,7 @@
         </div>
     </div>
 </div>    
-<div class="second-parallax">
+<div class="second-parallax responsive">
     </div>
     <!-- end tech port - para 3 -->
 
@@ -133,7 +133,7 @@
                 </div>
             </div>
         </div>
-        <div class="third-parallax">
+        <div class="third-parallax responsive">
             </div>
     <!-- end art port - para 4 -->
     </div>
