remove dog site

--- a/public/techPort.html
+++ b/public/techPort.html
@@ -90,7 +90,7 @@
          </div>
          <!-- end Row -->
 
-         <!-- row 2 Train that Dog begins -->
+         <!-- row 2 Train that Dog begins
          <div class="row rowStyling">
                 <div class="col-md-4">
                     <div class="cardStyleL" id="port-image-2" style="width: 20rem;">
@@ -110,9 +110,8 @@
                         </div>
                     </div>
                 </div>
-             </div>
-
-
+             </div> -->
+       
 
             <!-- Row 3 JSJ Swim begins -->
             <div class="row rowStyling">
@@ -137,6 +136,27 @@
                     </div>
                  </div>
              <!-- end Row -->
+    <!-- row 2 NY Times -->
+        <div class="row rowStyling">
+            <div class="col-md-4">
+                <div class="cardStyleL" id="port-image-2" style="width: 20rem;">
+                    <img class="card-img-top" src="./assets/img/NYTimes.png">
+                    <div class="card-block">
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-8">
+                <div class="cardStyleR">
+                    <div class="card-body">
+                        <h5 class="card-title thin-lead-text">NY Times Scraping Articles</h5>
+                        <p class="card-text">Using MongoDB, Express, React, Java Script and Node. Scraping articles to be saved.</p>
+                        <a href="https://damp-thicket-85069.herokuapp.com/" target="_blank" class="btn btnSite btnCustom float-right">View the site</a>
+                        <a href="https://github.com/JArtschwager/ReactAPINYT" target="_blank" class="btn btnGithub btnCustom float-right">View the code</a>
+                    </div>
+                </div>
+            </div>
+         </div>
              <!-- row 4 Do Jersey begins -->
              <div class="row rowStyling">
                     <div class="col-md-4">
@@ -181,6 +201,7 @@
                     </div>
                  </div>
                  <!-- ending container -->     
+                 
                 </div>
 
    <div class="techBannerImage">
